src/test/deca/syntax/invalid/synt/opBool3.deca
// Description:
//    Programme opBoolean probleme d'assignement
//
// Resultats:
//      mismatched input ';' expecting {'new', 'null', 'this', 'true', 'false', 'readInt', 'readFloat', '-', '(', '!', INT, FLOAT, STRING, IDENT}      
//
// Historique:
//    cree le 01/01/2022


{
    boolean a=true false;

}
